# Nuke

./: .gitignore  CLAUDE.md  IMPROVEMENTS_SUMMARY.md  NUKE_PYTHON_BEST_PRACTICES.md  README.md  export_utils.py  extract_scripts.py  menu.py  mm_cone_read.py  mm_geo_read.py  mm_ld_import.py  mm_plate_read.py  mm_playblast_read.py  mm_slapcomp_export_setup.py  mm_wireframe_export_setup.py  mm_write_altplates.py  nuke_latest.txt  nuke_latest_metadata.json  pipeline_config.py  pyproject.toml
tests/: conftest.py  test_export_utils.py  test_pipeline_config.py  test_plate_read.py
