[project]
name = "nuke-automation-toolkit"
version = "0.1.0"
description = "Nuke Python automation toolkit for VFX pipeline operations"
readme = "CLAUDE.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Gabriel H."}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "basedpyright>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all Python scripts at root level (not a traditional package)
packages = ["."]
only-include = [
    "mm_*.py",
    "pipeline_config.py",
    "menu.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "mm_*.py",
    "pipeline_config.py",
    "menu.py",
    "tests/",
    "pyproject.toml",
    "CLAUDE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests that don't require file system",
    "integration: Tests that use temporary file structures",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mm_geo_read", "mm_plate_read", "mm_playblast_read", "mm_ld_import", "mm_write_altplates", "pipeline_config"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
# Ignore nuke module since it's only available inside Nuke
reportMissingModuleSource = "none"
